<resources>
    <string name="app_name">My NanoPortfolio</string>

    <string name="title">My Nanodegree apps!</string>
    <string name="settings">My NanoSettings</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2">Football Scores App</string>
    <string name="app_3">Library App</string>
    <string name="app_4">Build It Bigger</string>
    <string name="app_5">XYZ Reader</string>
    <string name="app_6">Capstone</string>
    <string name="toast_message">This button will display</string>
</resources>
