<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#E1F5FE"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="inherit"
        android:textColor="#212121"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:typeface="sans"
        android:layout_gravity="center_horizontal"
        android:height="40dp"
        android:layout_weight="0.26" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:background="@drawable/buttonColor"
        android:onClick="displayToast"
        android:layout_marginBottom="10dp"
        android:textColor="#fff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:textColor="#fff"
        android:background="@drawable/buttonColor"
        android:onClick="displayToast"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:onClick="displayToast"
        android:background="@drawable/buttonColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:onClick="displayToast"
        android:background="@drawable/buttonColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:textColor="#fff"
        android:background="@drawable/buttonColor"
        android:onClick="displayToast"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_6"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:width="200dp"
        android:textColor="#fff"
        android:background="@drawable/buttonColor"
        android:onClick="displayToast"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
